--- a/main.html
+++ b/main.html
@@ -8,6 +8,29 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li>
+				<a href="https://www.fairway.com/">Home</a>
+			</li>
+			<li><a href="https://www.w3schools.com/html/html_links.asp">W3School</a></li>
+			<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/a">MDN document</a></li>
+		</ul>
+	</nav>
+	<section>
+		<h1>3 random audios</h1
+							   
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+		your browser does not support the audio element
+	</audio><br>
+	<audio controls>
+		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3">
+	</audio><br>
+	<audio controls>
+		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+	</audio><br>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
