--- a/main.html
+++ b/main.html
@@ -1,49 +1,39 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Semantic Navbar & Audios</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<nav>
-		<ul>
-			<li>
-				<a href="https://www.fairway.com/">Home</a>
-			</li>
-			<li><a href="https://www.w3schools.com/html/html_links.asp">W3School</a></li>
-			<li><a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/a">MDN document</a></li>
-		</ul>
-	</nav>
-	<section>
-		<h1>3 random audios</h1
-						   
- <div>
-								   <audio controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
-	    </audio><br>
-	
-							   </div>
-<div>
-							   <div>
-								   <audio controls>
-		<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/mp3">
-	    </audio><br>
-	
-							   </div>
-<div>
-	<audio controls>
-		<source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
-	</audio><br>
 
-</div>
-	
-	</section>
-    <script type="text/javascript" src="./script.js">
-</script>
+  <!-- Part 1: Semantic Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="https://example.com/home">Home</a></li>
+      <li><a href="https://example.com/about">About</a></li>
+      <li><a href="https://example.com/contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Part 2: Audio Section -->
+  <h2>3 random audios</h2>
+
+  <audio controls>
+    <source src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
+  <br>
+
+  <audio controls>
+    <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+    Your browser does not support the audio element.
+  </audio>
+  <br>
+
+  <audio controls>
+    <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
+    Your browser does not support the audio element.
+  </audio>
 
 </body>
-
 </html>
