--- a/main.html
+++ b/main.html
@@ -16,6 +16,7 @@
   </nav>
 
   <!-- Part 2: Audio Section -->
+  <section>
   <h2>3 random audios</h2>
 
   <audio controls>
@@ -34,6 +35,6 @@
     <source src="http://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
-
+</section>
 </body>
 </html>
